<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="200dp"
    android:background="@color/fourth_color"
    android:orientation="vertical"
    android:gravity="bottom"
    android:padding="20dp">
<ImageView
    android:paddingTop="10dp"
    android:layout_width="60dp"
    android:layout_height="60dp"
    android:src="@drawable/aeronav_icon"
    android:contentDescription="@string/app_name"/>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/app_name"
        android:fontFamily="@font/baloo"
        android:textSize="24sp"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/aclonica"
        android:text="@string/planning_adventures"
        android:textSize="14sp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/aclonica"
        android:text="@string/https_github_com_vidssk_team8"
        android:textSize="12sp"
        android:paddingBottom="10dp" />

</LinearLayout>