<?xml version="1.0" encoding="utf-8"?>
<androidx.drawerlayout.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/drawer_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center"
    tools:openDrawer="start"
    tools:context=".PackagesActivity">
<!--        Hide Navigation View Below to see screen. don't Forget to put it back-->
    <com.google.android.material.navigation.NavigationView
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        app:headerLayout="@layout/header"
        app:menu="@menu/main_menu"
        android:id="@+id/nav_view"
        android:layout_gravity="start"
        />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"

        android:layout_height="match_parent">
        <include
            android:id="@+id/toolbar"
            layout="@layout/toolbar"
            />


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:id="@+id/main"
            android:orientation="vertical"
            android:gravity="center">
            <!--            Above is Layout for Navigation do not change.-->
            <!-- Create Custom Layout Underneath-->
            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="20dp"
                android:layout_gravity="center"

                >
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
>
                    <LinearLayout
                        android:id="@+id/package1"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal"
                        android:layout_marginTop="10dp"
                        android:layout_marginBottom="10dp"
                        android:background="@color/third_color">
                        <!--                    Want to replace with ImageView to see photos as backgrounds-->
                        <TextView
                            android:id="@+id/destination1"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:padding="10dp"
                            android:background="@color/secondary_color"
                            android:textColor="@color/white"
                            android:text="@string/package_1"/>
                        <TextView
                            android:id="@+id/flight1"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/flight"
                            android:padding="10dp"/>
                        <TextView
                            android:id="@+id/activity1"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/activity"
                            android:padding="10dp"/>
                        <TextView
                            android:id="@+id/hotel1"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/hotel"
                            android:padding="10dp"/>
                    </LinearLayout>
                    <LinearLayout
                        android:id="@+id/package2"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal"
                        android:layout_marginTop="10dp"
                        android:layout_marginBottom="10dp"
                        android:background="@color/third_color">
                        <!--                    Want to replace with ImageView to see photos as backgrounds-->
                        <TextView
                            android:id="@+id/destination2"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:padding="10dp"
                            android:background="@color/secondary_color"
                            android:textColor="@color/white"
                            android:text="@string/package_2"/>
                        <TextView
                            android:id="@+id/flight2"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/flight"
                            android:padding="10dp"/>
                        <TextView
                            android:id="@+id/activity2"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/activity"
                            android:padding="10dp"/>
                        <TextView
                            android:id="@+id/hotel2"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/hotel"
                            android:padding="10dp"/>
                    </LinearLayout>
                    <LinearLayout
                        android:id="@+id/package3"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal"
                        android:layout_marginTop="10dp"
                        android:layout_marginBottom="10dp"
                        android:background="@color/third_color">
                        <!--                    Want to replace with ImageView to see photos as backgrounds-->
                        <TextView
                            android:id="@+id/destination3"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:padding="10dp"
                            android:background="@color/secondary_color"
                            android:textColor="@color/white"
                            android:text="@string/package_3"/>
                        <TextView
                            android:id="@+id/flight3"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/flight"
                            android:padding="10dp"/>
                        <TextView
                            android:id="@+id/activity3"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/activity"
                            android:padding="10dp"/>
                        <TextView
                            android:id="@+id/hotel3"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/hotel"
                            android:padding="10dp"/>
                    </LinearLayout>
                    <LinearLayout
                        android:id="@+id/package4"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal"
                        android:layout_marginTop="10dp"
                        android:layout_marginBottom="10dp"
                        android:background="@color/third_color">
                        <!--                    Want to replace with ImageView to see photos as backgrounds-->
                        <TextView
                            android:id="@+id/destination4"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:padding="10dp"
                            android:background="@color/secondary_color"
                            android:textColor="@color/white"
                            android:text="@string/package_4"/>
                        <TextView
                            android:id="@+id/flight4"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/flight"
                            android:padding="10dp"/>
                        <TextView
                            android:id="@+id/activity4"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/activity"
                            android:padding="10dp"/>
                        <TextView
                            android:id="@+id/hotel4"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/hotel"
                            android:padding="10dp"/>
                    </LinearLayout>
                    <LinearLayout
                        android:id="@+id/package5"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal"
                        android:layout_marginTop="10dp"
                        android:layout_marginBottom="10dp"
                        android:background="@color/third_color">
                        <!--                    Want to replace with ImageView to see photos as backgrounds-->
                        <TextView
                            android:id="@+id/destination5"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:padding="10dp"
                            android:background="@color/secondary_color"
                            android:textColor="@color/white"
                            android:text="@string/package_5"/>
                        <TextView
                            android:id="@+id/flight5"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/flight"
                            android:padding="10dp"/>
                        <TextView
                            android:id="@+id/activity5"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/activity"
                            android:padding="10dp"/>
                        <TextView
                            android:id="@+id/hotel5"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/hotel"
                            android:padding="10dp"/>
                    </LinearLayout>

                </LinearLayout>
            </androidx.cardview.widget.CardView>
        </LinearLayout>
    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.drawerlayout.widget.DrawerLayout>

